--- a/ADO/Web.config
+++ b/ADO/Web.config
@@ -6,7 +6,9 @@
 <configuration>
 	<connectionStrings>
 		<add name="northwind" connectionString="Data Source=.;Integrated Security = SSPI; Initial Catalog = Northwind;Connection Timeout=30;" providerName="System.Data.SqlClient"/>
-		<add name="firstdb" connectionString="Data Source=.;Integrated Security = SSPI; Initial Catalog = FirstDB;Connection Timeout=30;" providerName="System.Data.SqlClient"/>
+		<add name="firstdb" connectionString="Data Source=.;Integrated Security = SSPI; Initial Catalog = FirstDB;Connection Timeout=30;" />
+		<add name="sourcedb" connectionString="Data Source=.;Integrated Security = SSPI; Initial Catalog = sourcedb;Connection Timeout=30;" providerName="System.Data.SqlClient"/>
+
 	</connectionStrings>
   <system.web>
 	  <caching>
