--- a/ADO/Web.config
+++ b/ADO/Web.config
@@ -8,6 +8,7 @@
 		<add name="northwind" connectionString="Data Source=.;Integrated Security = SSPI; Initial Catalog = Northwind;Connection Timeout=30;" providerName="System.Data.SqlClient"/>
 		<add name="firstdb" connectionString="Data Source=.;Integrated Security = SSPI; Initial Catalog = FirstDB;Connection Timeout=30;" />
 		<add name="sourcedb" connectionString="Data Source=.;Integrated Security = SSPI; Initial Catalog = sourcedb;Connection Timeout=30;" providerName="System.Data.SqlClient"/>
+		<add name="destinationdb" connectionString="Data Source=.;Integrated Security = SSPI; Initial Catalog = destinationdb;Connection Timeout=30;" providerName="System.Data.SqlClient"/>
 
 	</connectionStrings>
   <system.web>
