--- a/LINQ/App.config
+++ b/LINQ/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+	<connectionStrings>
+		<add name="northwind" connectionString="Data Source=.;Integrated Security = SSPI; Initial Catalog = NorthWind;Connection Timeout=30;" />
+	</connectionStrings>
 </configuration>
