--- a/LINQ/LINQ.csproj
+++ b/LINQ/LINQ.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Projection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Random Ordering.cs" />
     <Compile Include="Runtime Created Assembly Lines.cs" />
     <Compile Include="ThisInCsharp.cs" />
     <Compile Include="Writing Your Own LINQ Extension Method.cs" />
