--- a/ExpressTrees/ExpressTrees.csproj
+++ b/ExpressTrees/ExpressTrees.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Expression Trees.cs" />
     <Compile Include="Intro.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
