--- a/ExpressTrees/ExpressTrees.csproj
+++ b/ExpressTrees/ExpressTrees.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{E206D0A5-549E-4DFD-848C-96DA452C4DA3}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <RootNamespace>ExpressTrees</RootNamespace>
     <AssemblyName>ExpressTrees</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
