--- a/ExpressTrees/ExpressTrees.csproj
+++ b/ExpressTrees/ExpressTrees.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="Expression Trees.cs" />
     <Compile Include="Intro.cs" />
+    <Compile Include="Picking Apart Expression Trees.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
