--- a/ExpressTrees/App.config
+++ b/ExpressTrees/App.config
@@ -9,6 +9,7 @@
   </startup>
   <connectionStrings>
     <add name="northwind" providerName="System.Data.SqlClient" connectionString="Data Source=.;Integrated Security = SSPI; Initial Catalog = NorthWind;Connection Timeout=30;" />
+	 <add name="firstdb" providerName="System.Data.SqlClient" connectionString="Data Source=.;Integrated Security = SSPI; Initial Catalog = firstdb;Connection Timeout=30;" />
   </connectionStrings>
   <entityFramework>
     <providers>
