--- a/EmployeeDataAceess/App.Config
+++ b/EmployeeDataAceess/App.Config
@@ -6,6 +6,8 @@
   </configSections>
   <connectionStrings>
     <add name="firstdbEntities" connectionString="metadata=res://*/EmployeeDataModel.csdl|res://*/EmployeeDataModel.ssdl|res://*/EmployeeDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=firstdb;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="firstdbEntities1" connectionString="metadata=res://*/EmployeesDataModel.csdl|res://*/EmployeesDataModel.ssdl|res://*/EmployeesDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=firstdb;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="firstdbEntities2" connectionString="metadata=res://*/Test1DataModel.csdl|res://*/Test1DataModel.ssdl|res://*/Test1DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=firstdb;integrated security=True;multipleactiveresultsets=True;connect timeout=30;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
