--- a/EmployeeDataAceess/EmployeeDataAceess.csproj
+++ b/EmployeeDataAceess/EmployeeDataAceess.csproj
@@ -50,6 +50,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Department.cs">
+      <DependentUpon>EmployeesDataModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Employee.cs">
       <DependentUpon>EmployeeDataModel.tt</DependentUpon>
     </Compile>
@@ -68,7 +71,40 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>EmployeeDataModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="EmployeesDataModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EmployeesDataModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EmployeesDataModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EmployeesDataModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EmployeesDataModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EmployeesDataModel.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="test1.cs">
+      <DependentUpon>Test1DataModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Test1DataModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Test1DataModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Test1DataModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Test1DataModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Test1DataModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Test1DataModel.edmx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EntityDeploy Include="EmployeeDataModel.edmx">
@@ -81,7 +117,21 @@
     <None Include="EmployeeDataModel.edmx.diagram">
       <DependentUpon>EmployeeDataModel.edmx</DependentUpon>
     </None>
+    <EntityDeploy Include="EmployeesDataModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>EmployeesDataModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="EmployeesDataModel.edmx.diagram">
+      <DependentUpon>EmployeesDataModel.edmx</DependentUpon>
+    </None>
     <None Include="packages.config" />
+    <EntityDeploy Include="Test1DataModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>Test1DataModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="Test1DataModel.edmx.diagram">
+      <DependentUpon>Test1DataModel.edmx</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="EmployeeDataModel.Context.tt">
@@ -93,6 +143,26 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>EmployeeDataModel.edmx</DependentUpon>
       <LastGenOutput>EmployeeDataModel.cs</LastGenOutput>
+    </Content>
+    <Content Include="EmployeesDataModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>EmployeesDataModel.edmx</DependentUpon>
+      <LastGenOutput>EmployeesDataModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="EmployeesDataModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>EmployeesDataModel.edmx</DependentUpon>
+      <LastGenOutput>EmployeesDataModel.cs</LastGenOutput>
+    </Content>
+    <Content Include="Test1DataModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Test1DataModel.edmx</DependentUpon>
+      <LastGenOutput>Test1DataModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Test1DataModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Test1DataModel.edmx</DependentUpon>
+      <LastGenOutput>Test1DataModel.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <ItemGroup>
