--- a/FirstWebApi/Web.config
+++ b/FirstWebApi/Web.config
@@ -10,6 +10,8 @@
   </configSections>
 	<connectionStrings>
 		<add name="firstdbEntities" connectionString="metadata=res://*/EmployeeDataModel.csdl|res://*/EmployeeDataModel.ssdl|res://*/EmployeeDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=firstdb;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<add name="firstdbEntities1" connectionString="metadata=res://*/EmployeesDataModel.csdl|res://*/EmployeesDataModel.ssdl|res://*/EmployeesDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=firstdb;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
 	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
