--- a/Design Patterns/Design Patterns.csproj
+++ b/Design Patterns/Design Patterns.csproj
@@ -61,6 +61,9 @@
     <Compile Include="NoteStore.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="repository\Course.cs" />
+    <Compile Include="repository\CourseRepository.cs" />
+    <Compile Include="repository\ICourseRepository.cs" />
     <Compile Include="repository\IRepository.cs" />
     <Compile Include="repository\IUnitOfWork.cs" />
     <Compile Include="repository\Repository.cs" />
@@ -69,7 +72,9 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="NewFolder1\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
