--- a/Design Patterns/Design Patterns.csproj
+++ b/Design Patterns/Design Patterns.csproj
@@ -61,9 +61,10 @@
     <Compile Include="NoteStore.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="repository\Course.cs" />
+    <Compile Include="repository\Employee.cs" />
     <Compile Include="repository\CourseRepository.cs" />
-    <Compile Include="repository\ICourseRepository.cs" />
+    <Compile Include="repository\DbContext.cs" />
+    <Compile Include="repository\IEmployeeRepository.cs" />
     <Compile Include="repository\IRepository.cs" />
     <Compile Include="repository\IUnitOfWork.cs" />
     <Compile Include="repository\Repository.cs" />
@@ -73,9 +74,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="NewFolder1\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
