--- a/Design Patterns/Design Patterns.csproj
+++ b/Design Patterns/Design Patterns.csproj
@@ -68,6 +68,7 @@
     <Compile Include="repository\IRepository.cs" />
     <Compile Include="repository\IUnitOfWork.cs" />
     <Compile Include="repository\Repository.cs" />
+    <Compile Include="repository\Start.cs" />
     <Compile Include="repository\UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
