--- a/Design Patterns/Design Patterns.csproj
+++ b/Design Patterns/Design Patterns.csproj
@@ -61,7 +61,7 @@
     <Compile Include="NoteStore.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="repository\Employee.cs" />
+    <Compile Include="repository\Employees.cs" />
     <Compile Include="repository\CourseRepository.cs" />
     <Compile Include="repository\DbContext.cs" />
     <Compile Include="repository\IEmployeeRepository.cs" />
