--- a/Design Patterns/Design Patterns.csproj
+++ b/Design Patterns/Design Patterns.csproj
@@ -62,7 +62,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="repository\Employees.cs" />
-    <Compile Include="repository\CourseRepository.cs" />
+    <Compile Include="repository\EmployeeRepository.cs" />
     <Compile Include="repository\DbContext.cs" />
     <Compile Include="repository\IEmployeeRepository.cs" />
     <Compile Include="repository\IRepository.cs" />
