--- a/EmpolyeeAuthServiceApi/EmpolyeeAuthServiceApi.csproj
+++ b/EmpolyeeAuthServiceApi/EmpolyeeAuthServiceApi.csproj
@@ -210,6 +210,7 @@
     <Compile Include="Controllers\EmployeeController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\StudentController.cs" />
+    <Compile Include="Controllers\StudentV2Controller .cs" />
     <Compile Include="Controllers\StudentV1Controller.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Employee.cs">
@@ -237,6 +238,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Student.cs" />
+    <Compile Include="Models\StudentV2.cs" />
     <Compile Include="Models\StudentV1.cs" />
     <Compile Include="Models\Teacher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
