--- a/EmpolyeeAuthServiceApi/EmpolyeeAuthServiceApi.csproj
+++ b/EmpolyeeAuthServiceApi/EmpolyeeAuthServiceApi.csproj
@@ -296,6 +296,7 @@
     <Content Include="EmployeeDataModel.edmx.diagram">
       <DependentUpon>EmployeeDataModel.edmx</DependentUpon>
     </Content>
+    <Content Include="ClassDiagram1.cd" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
