--- a/concurrency and parallelism/concurrency and parallelism.csproj
+++ b/concurrency and parallelism/concurrency and parallelism.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>concurrency_and_parallelism</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Threading\" />
+  </ItemGroup>
+
 </Project>
