--- a/Design Patterns/Design Patterns.csproj
+++ b/Design Patterns/Design Patterns.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="DependencyInversion.cs" />
     <Compile Include="MimicWebResult\Iprovider.cs" />
+    <Compile Include="MimicWebResult\Login.cs" />
     <Compile Include="MVC\EntryPoint.cs" />
     <Compile Include="MVC\FirstAttempt.cs" />
     <Compile Include="MVC\MVCContainer.cs" />
