--- a/Design Patterns/Design Patterns.csproj
+++ b/Design Patterns/Design Patterns.csproj
@@ -54,8 +54,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DependencyInversion.cs" />
+    <Compile Include="MimicWebResult\BaseController.cs" />
     <Compile Include="MimicWebResult\Iprovider.cs" />
-    <Compile Include="MimicWebResult\Login.cs" />
+    <Compile Include="MimicWebResult\StrartUp.cs" />
     <Compile Include="MimicWebResult\Provider1.cs" />
     <Compile Include="MVC\EntryPoint.cs" />
     <Compile Include="MVC\FirstAttempt.cs" />
