--- a/Design Patterns/Design Patterns.csproj
+++ b/Design Patterns/Design Patterns.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DependencyInversion.cs" />
+    <Compile Include="MiddleWare\test1.cs" />
     <Compile Include="MimicWebResult\BaseController.cs" />
     <Compile Include="MimicWebResult\BaseDSL.cs" />
     <Compile Include="MimicWebResult\Iprovider.cs" />
