--- a/WindowsServiceTest1/WindowsServiceTest1.csproj
+++ b/WindowsServiceTest1/WindowsServiceTest1.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="anyoneinhereteFromSerivceBaseIconChanges.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="ProjectInstaller.cs">
       <SubType>Component</SubType>
     </Compile>
