--- a/WebFormFirst/Web.config
+++ b/WebFormFirst/Web.config
@@ -33,7 +33,7 @@
 		  <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
       </controls>
     </pages>
-	  <sessionState mode ="InProc" cookieless="false"></sessionState>
+	  <sessionState mode ="InProc" cookieless="false" timeout="1"></sessionState>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
