--- a/WebApiCore/Properties/launchSettings.json
+++ b/WebApiCore/Properties/launchSettings.json
@@ -3,13 +3,13 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:17062",
-      "sslPort": 44324
+      "applicationUrl": "http://localhost:58563/",
+      "sslPort": 44325
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "IIS Express": {    
+    "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
