--- a/cryptography/App.config
+++ b/cryptography/App.config
@@ -3,4 +3,11 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
+	<appSettings>
+		<add  key="key1" value="value1"/>
+		<add  key="key2" value="value2"/>
+	</appSettings>
+	<connectionStrings>
+		<add name="ConnectionString" connectionString="DATA SOURCE=192.168.92.82:1521/ntorcl;PERSIST SECURITY INFO=True;USER ID=Moh_suez;password=Moh_suez;Max Pool Size=50" providerName="Oracle.DataAccess.Client"  />
+	</connectionStrings>
 </configuration>
