--- a/cryptography/cryptography.csproj
+++ b/cryptography/cryptography.csproj
@@ -33,15 +33,31 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NT.Integration.Shield">
+    <Reference Include="NT.Integration.SharedKernel.Classes">
+      <HintPath>D:\IntegrationServiceAzure\NT.Integration.Shared\NT.Integration.SharedKernel.OracleManagedHelper\bin\Debug\netstandard2.0\NT.Integration.SharedKernel.Classes.dll</HintPath>
+    </Reference>
+    <Reference Include="NT.Integration.SharedKernel.Enums">
+      <HintPath>D:\IntegrationServiceAzure\NT.Integration.Shared\NT.Integration.SharedKernel.OracleManagedHelper\bin\Debug\netstandard2.0\NT.Integration.SharedKernel.Enums.dll</HintPath>
+    </Reference>
+    <Reference Include="NT.Integration.SharedKernel.ExceptionHandling">
+      <HintPath>D:\IntegrationServiceAzure\NT.Integration.Shared\NT.Integration.SharedKernel.OracleManagedHelper\bin\Debug\netstandard2.0\NT.Integration.SharedKernel.ExceptionHandling.dll</HintPath>
+    </Reference>
+    <Reference Include="NT.Integration.SharedKernel.OracleManagedHelper">
+      <HintPath>D:\IntegrationServiceAzure\NT.Integration.Shared\NT.Integration.SharedKernel.OracleManagedHelper\bin\Debug\netstandard2.0\NT.Integration.SharedKernel.OracleManagedHelper.dll</HintPath>
+    </Reference>
+    <Reference Include="NT.Integration.Shield, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>D:\IntegrationServiceAzure\Shared_Services_Apis_NT\EncryptionWebPage\NT.Integration.Shield\bin\Debug\NT.Integration.Shield.dll</HintPath>
     </Reference>
+    <Reference Include="Oracle.ManagedDataAccess, Version=2.0.19.1, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=MSIL">
+      <HintPath>..\packages\Oracle.ManagedDataAccess.Core.2.19.140\lib\netstandard2.0\Oracle.ManagedDataAccess.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -51,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
