--- a/benchMark/benchMark.csproj
+++ b/benchMark/benchMark.csproj
@@ -253,6 +253,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bench.cs" />
+    <Compile Include="CouncurrentBagVsList.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sample.cs" />
