--- a/Async Programming/Async Programming.csproj
+++ b/Async Programming/Async Programming.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>Async_Programming</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
 </Project>
