--- a/DiffrentHttpLibInCsharp/Properties/launchSettings.json
+++ b/DiffrentHttpLibInCsharp/Properties/launchSettings.json
@@ -1,30 +1,30 @@
-﻿{
+{
+  "profiles": {
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "launchUrl": "weatherforecast?CityName=cairo",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "DiffrentHttpLibInCsharp": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "weatherforecast?CityName=cairo",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "http://localhost:5001;http://localhost:5000"
+    }
+  },
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:1113",
-      "sslPort": 44300
-    }
-  },
-  "profiles": {
-    "IIS Express": {
-        "commandName": "IISExpress",
-        "launchBrowser": true,
-        "launchUrl": "weatherforecast?CityName=cairo",
-        "environmentVariables": {
-            "ASPNETCORE_ENVIRONMENT": "Development"
-        }
-    },
-    "DiffrentHttpLibInCsharp": {
-        "commandName": "Project",
-        "launchBrowser": true,
-        "launchUrl": "weatherforecast?CityName=cairo",
-        "applicationUrl": "https://localhost:5001;http://localhost:5000",
-        "environmentVariables": {
-            "ASPNETCORE_ENVIRONMENT": "Development"
-        }
+      "sslPort": 0
     }
   }
 }
